// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary should call captureException 1`] = `<div />`;

exports[`ErrorBoundary should render children component 1`] = `
<div>
  <div>
    Normal component
  </div>
</div>
`;

exports[`ErrorBoundary should render fallback component 1`] = `
<div>
  <div>
    Fallback
  </div>
</div>
`;

exports[`SafeSuspense should render with props 1`] = `
<div>
  <div>
    Normal component
  </div>
</div>
`;
